[package]
name = "rust-programming"
version = "0.1.0"
edition = "2024"


[[example]]
name = "box"
path = "examples/box_var.rs"

[[example]]
name="guess"
path = "examples/guess_number.rs"
[[example]]
name="guess_range"
path = "examples/guess_range.rs"

[[example]]
name = "variables_consts"
path = "examples/variables_consts.rs"
[[example]]
name = "box_link"
path = "examples/box_link.rs"
[[example]]
name ="struct_demo"
path = "examples/struct_demo.rs"

[[example]]
name= "overflow_demo"
path = "examples/overflow_demo.rs"

[[bin]]
name = "minigrep"
path = "src/bin/minigrep/main.rs"
[lib]
name = "minigre_lib"       # 库的名称（默认是项目名）
path = "src/bin/minigrep/lib.rs"     # 自定义入口文件（非 src/lib.rs）
crate-type = ["lib"]       # 库类型（默认是 "lib"，即 Rust 库）


[dependencies]
csv = "1.4.0"
rand = "0.9.2"
rnd = "0.1.1"
serde = "1.0.228"
serde_json = "1.0.145"
